--- a/picture-of-the-day.html
+++ b/picture-of-the-day.html
@@ -18,12 +18,16 @@
   <main>
     <!-- <form>
       <label for="fname">Date</label>
-      <input type="text" id="desiredDate" name="desiredDate" placeholder="MM/DD/YYYY"> -->
-    <!-- </form> -->
+      <input type="text" id="desiredDate" name="desiredDate" placeholder="MM/DD/YYYY">
+      <button id="pic_day">GET PICTURE!</button>
+
+    </form> -->
 
     <input id="pic_input_date" placeholder="YYYY-MM-DD"></input>
     <button id="pic_day">GET PICTURE!</button>
+    <div id="pic_of_day_container">
 
+    </div>
   </main>
   <footer>
 
