major progress with functionality and styling, close to finishing minimally viable product

--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
 
 <body>
   <header>
-
+    <div class="main_title"><img alt="NASA logo" src='./img/nasa-logo.jpg'>
+      <div>Asteroid Checker App <br>(and more!)</div>
+    </div>
+    <nav><a href="./index.html">Asteroid Checker</a><a href="./picture-of-the-day.html">Picture of the Day</a></nav>
   </header>
   <main>
     <div class="input_date_text">
-      Please enter a date to view statistics for closest Near Earth asteroids on that day.
+      Please enter a date to view statistics for closest Near Earth asteroids on that particular day.
     </div>
     <form class="input_form">
       <input id="asteroid_input_date" placeholder="YYYY-MM-DD"></input>
-      <button id="check_asteroids">Check asteroids!</button>
+      <button id="check_asteroids">CHECK ASTEROIDS!</button>
     </form>
 
     <div id="asteroid_container">
