--- a/picture-of-the-day.html
+++ b/picture-of-the-day.html
@@ -13,18 +13,27 @@
 
 <body>
   <header>
-
+    <div class="main_title"><img alt="NASA logo" src='./img/nasa-logo.jpg'>
+      <div>Asteroid Checker App <br>(and more!)</div>
+    </div>
+    <nav><a href="./index.html">Asteroid Checker</a><a href="./picture-of-the-day.html">Picture of the Day</a></nav>
   </header>
   <main>
+    <div class="input_date_text">
+      Please enter a date to view a specific NASA's Picture of the Day.
+    </div>
     <!-- <form>
       <label for="fname">Date</label>
       <input type="text" id="desiredDate" name="desiredDate" placeholder="MM/DD/YYYY">
       <button id="pic_day">GET PICTURE!</button>
 
     </form> -->
-
-    <input id="pic_input_date" placeholder="YYYY-MM-DD"></input>
-    <button id="pic_day">GET PICTURE!</button>
+    <form class="input_form">
+      <input id="pic_input_date" placeholder="YYYY-MM-DD"></input>
+      <button id="pic_day">GET PICTURE!</button>
+    </form>
+    <!-- <input id="pic_input_date" placeholder="YYYY-MM-DD"></input>
+    <button id="pic_day">GET PICTURE!</button> -->
     <div id="pic_of_day_container">
 
     </div>
