made most of functionality, now need data validation and a lot of CSS

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script defer src="js/main4.js" charset="utf-8"></script>
+  <script defer src="js/main5.js" charset="utf-8"></script>
   <link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" title="no title" charset="utf-8">
   <title>Asteroid Checker</title>
 </head>
@@ -28,6 +28,21 @@
     </form>
 
     <div id="asteroid_container">
+      <!-- <div class="individual_asteroid_container">
+        <div class="text_statistics">
+          <div class="specific_asteroid_info">Name: ${name}</div>
+          <div class="specific_asteroid_info">Diameter: ${diameter} kilometers
+          </div>
+          <div class="specific_asteroid_info">Miss Distance: ${distance} kilometers</div>
+          <div class="specific_asteroid_info">Potentially hazardous? <div class="hazardous">${hazardousValue}</div>
+          </div>
+        </div>
+        <div class="diameter_container">
+          <img alt="Photo of Manhattan" src="./img/manhattan.jpg">
+          <div class="photo_caption">This asteroid is roughly 78% the size of Manhattan</div>
+        </div>
+
+      </div> -->
 
     </div>
     </div>
