--- a/animation.html
+++ b/animation.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script defer src="js/main5.js" charset="utf-8"></script>
+  <script defer src="js/animation.js" charset="utf-8"></script>
   <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Graduate&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Catamaran&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" title="no title" charset="utf-8">
@@ -29,7 +30,11 @@
       <input id="asteroid_input_date" placeholder="YYYY-MM-DD"></input>
       <button id="check_asteroids">CHECK ASTEROIDS!</button>
     </form>
-
+    <div class="animation_test">
+      <div class="test_image" id="asteroid">
+        <img src="./img/asteroid3.png">
+      </div>
+    </div>
     <div id="asteroid_container">
       <!--  <div class="individual_asteroid_container">
         <div class="text_statistics">
