fixed the asteroid animation

--- a/animation.html
+++ b/animation.html
@@ -15,6 +15,9 @@
 </head>
 
 <body>
+  <div class="test_image" id="asteroid">
+    <img src="./img/asteroid3.png">
+  </div>
   <header>
     <div class="main_title"><img alt="NASA logo" src='./img/nasa_logo2.png'>
       <div>Asteroid Checker App</div>
@@ -30,11 +33,11 @@
       <input id="asteroid_input_date" placeholder="YYYY-MM-DD"></input>
       <button id="check_asteroids">CHECK ASTEROIDS!</button>
     </form>
-    <div class="animation_test">
+    <!-- <div class="animation_test">
       <div class="test_image" id="asteroid">
         <img src="./img/asteroid3.png">
       </div>
-    </div>
+    </div> -->
     <div id="asteroid_container">
       <!--  <div class="individual_asteroid_container">
         <div class="text_statistics">
