--- a/picture-of-the-day.html
+++ b/picture-of-the-day.html
@@ -7,14 +7,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script defer src="js/main2.js" charset="utf-8"></script>
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Catamaran|Graduate&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" title="no title" charset="utf-8">
   <title>NASA Picture of the Day</title>
 </head>
 
 <body>
   <header>
-    <div class="main_title"><img alt="NASA logo" src='./img/nasa-logo.jpg'>
-      <div>Asteroid Checker App <br>(and more!)</div>
+    <div class="main_title"><img alt="NASA logo" src='./img/nasa_logo2.png'>
+      <div>Asteroid Checker App</div>
+      <div class="subtitle">(and more!)</div>
     </div>
     <nav><a href="./index.html">Asteroid Checker</a><a href="./picture-of-the-day.html">Picture of the Day</a></nav>
   </header>
