fixed some size style issues and added a data validation functionality

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       Please enter a date to view stats and fun size comparisons for closest near Earth asteroids on that
       particular day.
     </div>
+    <div class="input_date_error">
+      Please enter a valid date
+    </div>
     <form class="input_form">
       <input id="asteroid_input_date" placeholder="YYYY-MM-DD"></input>
       <button id="check_asteroids">CHECK ASTEROIDS!</button>
