added functionality so that when you look up a pic of the day, it automatically takes you to the picture using an anchor link

--- a/index.html
+++ b/index.html
@@ -6,21 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script defer src="js/main5.js" charset="utf-8"></script>
+  <script defer src="js/main.js" charset="utf-8"></script>
   <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Catamaran|Graduate&display=swap" rel="stylesheet">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Catamaran&display=swap" rel="stylesheet"> -->
   <link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" title="no title" charset="utf-8">
   <title>Asteroid Checker</title>
 </head>
 
 <body>
   <div class="flying_asteroid" id="asteroid">
-    <img src="./img/asteroid3.png">
+    <img src="./img/flying_asteroid.png">
   </div>
   <header>
     <div class="main_title"><img alt="NASA logo" src='./img/nasa_logo2.png'>
       <div>Asteroid Watch</div>
-      <!-- <div class="subtitle">(and more!)</div> -->
     </div>
     <nav><a href="./index.html">Asteroid Checker</a><a href="./picture-of-the-day.html">Picture of the Day</a></nav>
   </header>
@@ -38,47 +36,6 @@
     </form>
 
     <div id="asteroid_container">
-      <!--  <div class="individual_asteroid_container">
-        <div class="text_statistics">
-          <div class="specific_asteroid_info">
-            <div class="statistic_value">Name:</div>
-            <div class="statistic_value">4179 Toutatis (1989 AC)</div>
-          </div>
-          <div class="specific_asteroid_info">
-            <div class="statistic_value">Avg Diameter:</div>
-            <div class="statistic_value"></div>3.922 km
-          </div>
-          <div class="specific_asteroid_info">
-            <div class="statistic_value">Miss Distance:</div>
-            <div class="statistic_value">6931174.9 km</div>
-          </div>
-          <div class="specific_asteroid_info">
-            <div class="statistic_value">Danger Level:</div>
-            <div class="statistic_value hazardous">Potentially hazardous</div>
-          </div>
-        </div>
-        <div class="diameter_container">
-          <img alt="Photo of Manhattan" src="./img/manhattan.jpg">
-          <div class="photo_caption">This asteroid's surface area is roughly 82% the size of Manhattan</div>
-        </div>
-      </div>
-    </div> -->
-      <!-- <div class="individual_asteroid_container">
-        <div class="text_statistics">
-          <div class="specific_asteroid_info">Name: ${name}</div>
-          <div class="specific_asteroid_info">Diameter: ${diameter} kilometers
-          </div>
-          <div class="specific_asteroid_info">Miss Distance: ${distance} kilometers</div>
-          <div class="specific_asteroid_info">Potentially hazardous? <div class="hazardous">${hazardousValue}</div>
-          </div>
-        </div>
-        <div class="diameter_container">
-          <img alt="Photo of Manhattan" src="./img/manhattan.jpg">
-          <div class="photo_caption">This asteroid is roughly 78% the size of Manhattan</div>
-        </div>
-
-      </div> -->
-
     </div>
 
   </main>
@@ -88,13 +45,3 @@
 </body>
 
 </html>
-
-<!-- <div class="individual_asteroid_container">
-        <div class="specific_asteroid_info">Name:</div>
-        <div class="specific_asteroid_info">Diameter:</div>
-        <div class="specific_asteroid_info">Miss Distance:</div>
-        <div class="specific_asteroid_info">Potentially hazardous?</div> -->
-
-<!-- <form>
-      <label for="fname">Date</label>
-      <input type="text" id="desiredDate" name="desiredDate" placeholder="MM/DD/YYYY"> -->
