--- a/picture-of-the-day.html
+++ b/picture-of-the-day.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script defer src="js/main2.js" charset="utf-8"></script>
+  <script defer src="js/pic.js" charset="utf-8"></script>
   <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Catamaran|Graduate&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" title="no title" charset="utf-8">
   <title>NASA Picture of the Day</title>
