cleaned up the code and added date validation to the Picture of the Day page

--- a/picture-of-the-day.html
+++ b/picture-of-the-day.html
@@ -23,18 +23,13 @@
     <div class="input_date_text">
       Please enter a date to view a specific NASA's Picture of the Day.
     </div>
-    <!-- <form>
-      <label for="fname">Date</label>
-      <input type="text" id="desiredDate" name="desiredDate" placeholder="MM/DD/YYYY">
-      <button id="pic_day">GET PICTURE!</button>
-
-    </form> -->
+    <div class="input_date_error">
+      Please enter a valid date
+    </div>
     <form class="input_form">
       <input id="pic_input_date" placeholder="YYYY-MM-DD"></input>
       <button id="pic_day">GET PICTURE!</button>
     </form>
-    <!-- <input id="pic_input_date" placeholder="YYYY-MM-DD"></input>
-    <button id="pic_day">GET PICTURE!</button> -->
     <div id="pic_of_day_container">
 
     </div>
